--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,9 @@ services:
     env_file: env/netbox.env
     user: 'unit:root'
     volumes:
-    - ./startup_scripts:/opt/netbox/startup_scripts:z,ro
+    - netbox-startup-scripts:/opt/netbox/startup_scripts:z,ro
     - ./initializers:/opt/netbox/initializers:z,ro
-    - ./configuration:/etc/netbox/config:z,ro
+    - netbox-configuration:/etc/netbox/config:z,ro
     - ./reports:/etc/netbox/reports:z,ro
     - ./scripts:/etc/netbox/scripts:z,ro
     - netbox-media-files:/opt/netbox/netbox/media:z
@@ -65,3 +65,8 @@ volumes:
     driver: local
   netbox-redis-data:
     driver: local
+  netbox-configuration:
+    driver: local
+  netbox-startup-scripts:
+    driver: local
+  
