--- a/env/netbox.env
+++ b/env/netbox.env
@@ -19,9 +19,9 @@ HOUSEKEEPING_INTERVAL=86400
 MAX_PAGE_SIZE=1000
 MEDIA_ROOT=/opt/netbox/netbox/media
 METRICS_ENABLED=false
-NAPALM_PASSWORD=
+NAPALM_PASSWORD=admin
 NAPALM_TIMEOUT=10
-NAPALM_USERNAME=
+NAPALM_USERNAME=admin
 REDIS_CACHE_DATABASE=1
 REDIS_CACHE_HOST=redis-cache
 REDIS_CACHE_INSECURE_SKIP_TLS_VERIFY=false
